# model-pipeline-brfss

./: .gitignore  README.md  best_model.pkl  metrics-DecisionTree-SMOTE-f1.json  metrics-DecisionTree-Undersampling-f1.json  model-DecisionTree-F1-SMOTE.pkl  model_metrics.json  pyproject.toml
model_pipeline/: pipeline.py
